syntax = "proto3";

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "common.proto";

option java_outer_classname = "AudioProto";
option java_package = "com.solutechconsulting.media.model.protobuf";

message GrpcAudio {
  string id = 1;
  string title = 2;
  string album_artist = 3;
  string album = 4;
  string artist = 5;
  int32 track_number = 6;
  google.protobuf.Duration duration = 7;
  int32 year = 8;
}

message TracksRequest {
  string albumTitle = 1;
}

service Audio {
  rpc Get (google.protobuf.Empty) returns (stream GrpcAudio);
  rpc Search (media.protobuf.SearchRequest) returns (stream GrpcAudio);
  rpc Tracks (TracksRequest) returns (stream GrpcAudio);
}
